--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,17 +1,14 @@
 
 
 .navbar {
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: end;
     align-items: center;
-    background-color: #333;
     color: white;
 }
 
-.brand-title {
-    font-size: 1.5rem;
-    margin: .5rem;
-}
 
 .navbar-links ul {
     margin: 0;
@@ -31,14 +28,14 @@
 }
 
 .navbar-links li:hover {
-    background-color: #555;
+background-color: rgb(2, 99, 75);
+border-radius: 5px;
 }
 
 .toggle-button {
-
+    left: 92%;
+    top: -30px;
     position: absolute;
-    transform: translateY(10px);
-    right: 5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -58,6 +55,7 @@
         display: flex;
     }
     .navbar-links {
+
       display: none; 
       width: 100%;
     }
@@ -65,6 +63,8 @@
     .navbar {
         flex-direction: column;
         align-items: flex-start;
+        
+
     }
 
     .navbar-links ul {
@@ -82,5 +82,27 @@
 
     .navbar-links.active {
         display: flex;
+        animation: desplegar-menu .3s ease-in;
     }
+    .navbar-links.inactive {
+      display: flex;
+      animation: ocultar-menu .3s ease-in;
+    }
+}
+
+@keyframes desplegar-menu {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 102px;
+  }
+}
+@keyframes ocultar-menu {
+  0% {
+    height: 102px;
+  }
+  100% {
+    height: 0px;
+  }
 }
