--- a/css/index.css
+++ b/css/index.css
@@ -7,8 +7,7 @@ body {
 .container-header {
     display: flex;
     justify-content: left;
-    /* background-color: rgb(22, 107, 86); */
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(0,133,100,1) 100%);
+    background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
     color: aliceblue;
 }
 
@@ -25,6 +24,7 @@ body {
 }
 
 .group-header img {
+    margin-left: 7px;
     padding: 6px;
     padding-right: 10px;
     border-radius: 60%;
@@ -54,10 +54,20 @@ body {
 
 .group-text-header h2 {
     font-size: 30px;
+
+}
+
+.container-section {
+
+    display: flex;
+    width: 100%;
 }
 
 @media (max-width: 600px) {
     .group-header {
         transform: translateY(0px);
+    }
+    .group-header div h3 {
+        max-width: 271px;
     }
 }
