--- a/css/responsive-servicios.css
+++ b/css/responsive-servicios.css
@@ -6,7 +6,7 @@
 	padding: 1rem;
 	display: grid;
 	place-items: center;
-
+	border-radius: 30px;
 	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
 }
 .img-servicios {
@@ -66,7 +66,7 @@
 .item:nth-child(3) {
 	--c2: darkorchid;
 	--p: 50% 100%;
-	/* background: repeating-radial-gradient(circle at var(--p), var(--c1), var(--c1) var(--i), var(--c2) var(--i), var(--c2) calc(var(--i) * 2)); */
+	
 }
 
 .item:nth-child(3) {
@@ -81,7 +81,7 @@
 }
 
 .item p {
-	background: black;
+	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
 	color: white;
 	padding: 0.5rem 0.75rem;
 	font-size: clamp(1.1rem, 5vmin, 2.8rem);
