--- a/css/footer.css
+++ b/css/footer.css
@@ -7,6 +7,7 @@
     width: 100%;
     flex-direction: column;
     background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
+    overflow-x: hidden;
 
 }
 
@@ -30,6 +31,15 @@
     background-color: white;
     border-radius: 50%;
     margin: 0 6px;
+    -webkit-box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
+    box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
+}
+
+.ico-footer img:hover {
+    background-color: rgb(43, 163, 133);
+    transition: background-color 1s;
+    cursor: pointer;
 }
 
 .item-footer {
@@ -64,6 +74,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        overflow-x: hidden;
     }
 }
 
