--- a/css/quienessomos.css
+++ b/css/quienessomos.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap");
 .container-quienes-somos {
     margin: 2%;
     display: flex;
@@ -11,6 +12,7 @@
 
 .container-quienes-somos h2 {
     color: rgba(17,91,92,1);
+    font-family: "Jost", sans-serif;
     background-color: white;
     padding: 5px;
     border-radius: 20px;
@@ -21,8 +23,10 @@
 }
 
 .container-quienes-somos p {
+    font-size: 16px;
     text-align: justify;
     color: white;
     padding: 10px;
+    font-family: 'Signika Negative', sans-serif;
 }
 
