--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,16 @@
 body {
     margin: 0;
     padding: 0;
-    min-width: 450px;
+    min-width: 410px;
     background-image: url("../img/textura.jpg");
     overflow-y: scroll;
     /*Thumb color and background color for firefox */
     scrollbar-color: #00c6ff #242942;
     overflow-x: none;
+    
 }
-
+/*font-family: 'Anton', sans-serif;*/
+/*font-family: 'Signika Negative', sans-serif;*/
 
 /*---- Scroll bar ---*/
 .sub-div {
@@ -77,6 +79,11 @@ body {
     transform: translateY(-15px);
 }
 
+.navbar-links ul li {
+    font-family: 'Signika Negative', sans-serif;
+    font-weight: 500;
+}
+
 .group-text-header {
     display: flex;
     flex-direction: column;
@@ -86,6 +93,17 @@ body {
 
 .group-text-header h2 {
     font-size: 30px;
+    font-style: oblique;
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 2px;
+
+}
+
+.group-text-header h3 {
+    font-style: oblique;
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 2px;
+
 
 }
 
@@ -122,6 +140,9 @@ body {
 
 
 .fondo-division-titulo h1 {
+    font-style: oblique;
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 2px;
     color: rgba(17,91,92,1);
     font-size: 35px;
     margin: 6px;
@@ -157,6 +178,8 @@ body {
     .quienes-somos {
         margin-bottom: 105px;
     }
+
+
 }
 
 @media (max-width: 600px) {
@@ -165,5 +188,7 @@ body {
     }
     .group-header div h3 {
         max-width: 271px;
+        transform: translate(-20px, -30px);
     }
+
 }
