--- a/css/responsive-servicios.css
+++ b/css/responsive-servicios.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap");
 .container-galeria-servicios {
 	margin-top: 35px;
 	margin-bottom: 55px;
 	width: 95%;
-	font-family: Merriweather, serif;
+	font-family: "Jost", sans-serif;
 	padding: 1rem;
 	display: grid;
 	place-items: center;
