Mejoras de rendimiento cuando cambias de modulo

--- a/css/index.css
+++ b/css/index.css
@@ -118,6 +118,9 @@ body {
     animation: aparecer 1s ease;
 }
 
+article, footer {
+    animation: aparecer .5s ease-in;
+}
 .division-titulo {
 
     width: 90%;
