--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,8 @@ body {
 
 .float-wp {
     position: fixed;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     background-color: #25d366;
     bottom: 60px;
     right: 25px;
@@ -31,7 +31,7 @@ body {
 
 .fa-whatsapp {
 
-    font-size: 50px;
+    font-size: 60px;
 
 }
 
@@ -198,18 +198,18 @@ article, footer {
 .fondo-division-titulo .logo-4 {
     transform: translateX(50px);
 }
-@media (min-width: 1246px) {
+/* @media (min-width: 1246px) {
     .float-wp {
        bottom : 60px;
        transition: bottom .5s ease;
     }
-}
-@media (max-width: 1245px) {
+} */
+/* @media (max-width: 1245px) {
     .float-wp {
         transition: bottom .5s ease;
         bottom: 155px;
     }
-}
+} */
 @media (max-width: 740px) {
     .container-section {
         margin-top: 80px;
@@ -220,12 +220,12 @@ article, footer {
     }
 }
 
-@media (max-width: 735px) {
+/* @media (max-width: 735px) {
     .float-wp {
         bottom: 60px;
         transition: bottom .5s ease;
     }
-}
+} */
 
 @media (max-width: 600px) {
     .group-header {
