--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    min-width: 410px;
+    min-width: 438px;
     background-image: url("../img/textura.jpg");
     overflow-y: scroll;
     /*Thumb color and background color for firefox */
@@ -83,12 +83,12 @@ body {
 }
 
 .group-header img {
-    margin-left: 7px;
-    padding: 6px;
-    padding-right: 10px;
-    border-radius: 60%;
+    background: #fff;
+    border-radius: 10%;
+    object-fit: contain;
+    margin: 20px;
     width: 150px;
-    height: 130px;
+    height: 150px;
     -webkit-box-shadow: -25px 20px 22px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -25px 20px 22px 0px rgba(0,0,0,0.75);
     box-shadow: -25px 20px 22px 0px rgba(0,0,0,0.75);
@@ -110,6 +110,7 @@ body {
 }
 
 .group-text-header {
+    text-align: left;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -117,10 +118,11 @@ body {
 }
 
 .group-text-header h2 {
-    font-size: 30px;
+    font-size: 40px;
     font-style: oblique;
-    font-family: 'Anton', sans-serif;
+    font-family: 'Merriweather', serif;
     letter-spacing: 2px;
+
 
 }
 
@@ -128,6 +130,7 @@ body {
     font-style: oblique;
     font-family: 'Anton', sans-serif;
     letter-spacing: 2px;
+ ;
 
 
 }
@@ -146,70 +149,12 @@ body {
 article, footer {
     animation: aparecer .5s ease-in;
 }
-.division-titulo {
 
-    width: 90%;
-    background-color: transparent;
-    margin-bottom: 35px;
-    padding-top: 6px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.video-services {
+    width: 200px;
+    height: 200px;
 }
 
-.fondo-division-titulo {
-    border-radius: 45%;
-    width: 400px;
-    height: 100px;
-    background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(140,140,140,1) 100%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.fondo-division-titulo h1 {
-    font-style: oblique;
-    font-family: 'Anton', sans-serif;
-    letter-spacing: 2px;
-    color: rgba(17,91,92,1);
-    font-size: 35px;
-    margin: 6px;
-}
-
-.fondo-division-titulo img {
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    -webkit-box-shadow: -8px 7px 23px -1px rgba(0,0,0,0.75);
-    -moz-box-shadow: -8px 7px 23px -1px rgba(0,0,0,0.75);
-    box-shadow: -8px 7px 23px -1px rgba(0,0,0,0.75);
-}
-
-.fondo-division-titulo .logo-1 {
-    transform: translateX(-30px);
-}
-.fondo-division-titulo .logo-2 {
-    transform: translateX(30px);
-}
-.fondo-division-titulo .logo-3 {
-    transform: translateX(-50px);
-}
-.fondo-division-titulo .logo-4 {
-    transform: translateX(50px);
-}
-/* @media (min-width: 1246px) {
-    .float-wp {
-       bottom : 60px;
-       transition: bottom .5s ease;
-    }
-} */
-/* @media (max-width: 1245px) {
-    .float-wp {
-        transition: bottom .5s ease;
-        bottom: 155px;
-    }
-} */
 @media (max-width: 740px) {
     .container-section {
         margin-top: 80px;
@@ -220,22 +165,26 @@ article, footer {
     }
 }
 
-/* @media (max-width: 735px) {
-    .float-wp {
-        bottom: 60px;
-        transition: bottom .5s ease;
-    }
-} */
+
 
 @media (max-width: 600px) {
     .group-header {
         transform: translateY(0px);
     }
     .group-header div h3 {
-        max-width: 271px;
+        width: 271px;
         transform: translate(-20px, -30px);
     }
 
+}
+
+@media (max-width: 461px) {
+    .group-header div h3 {
+        font-size: 25px;
+        transform: translate(-180px,-30px);
+
+
+    }
 }
 
 @keyframes aparecer {
