--- a/css/responsive-servicios.css
+++ b/css/responsive-servicios.css
@@ -10,7 +10,7 @@
 	border-radius: 30px;
 	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
 }
-.img-servicios {
+.vid-servicios {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -59,7 +59,12 @@
 	grid-template: 1fr / 1fr var(--innerTrack, 0);
 }
 
-.item:hover img {
+/* .item:hover img {
+	opacity: 1;
+	transform: translate3d(0, 0, 0);
+} */
+
+.item:hover video {
 	opacity: 1;
 	transform: translate3d(0, 0, 0);
 }
@@ -82,13 +87,14 @@
 }
 
 .item p {
+	text-align: center;
 	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
 	color: white;
 	padding: 0.5rem 0.75rem;
 	font-size: clamp(1.1rem, 5vmin, 2.8rem);
 	transition: opacity 300ms;
 	border-radius: 10px;
-	max-width: 190px;
+	min-width: 100px;
 	-webkit-box-shadow: -9px 16px 15px 0px rgba(0,0,0,0.75);
 	-moz-box-shadow: -9px 16px 15px 0px rgba(0,0,0,0.75);
 	box-shadow: -9px 16px 15px 0px rgba(0,0,0,0.75);
