--- a/css/footer.css
+++ b/css/footer.css
@@ -12,39 +12,38 @@
 
 }
 
-.container-footer h2 {
-    color: white;
-    font-size: 30px;
-}
-
-.group-items-footer {
-    display: flex;
+.group-sucursales-footer {
     width: 100%;
+    display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    padding: 15px;
+    justify-content:space-evenly;
+    align-items: center;
+
 }
 
-.group-tel-email {
+.sucursal-footer {
     display: flex;
     flex-direction: column;
+    margin: 2%;
 }
 
-.item-tel-email {
+.sucursal-footer .item-footer {
     width: 100%;
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
     align-items: center;
-    justify-content: center;
+    
 }
 
-.item-tel-email .ico-footer {
-    width: 25%;
+.sucursal-footer .item-footer .ico-footer {
+    width: 20%;
+    transform: translateX(-40px);
 }
-.item-tel-email p {
-    margin-left: 15px;
-    width: 75%;
+
+.sucursal-footer .item-footer .text-direccion {
+    width: 80%;
+    height: 45px;
+
 }
 
 .ico-footer img {
@@ -65,79 +64,20 @@
     cursor: pointer;
 }
 
-.item-footer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
 
-}
-.redes-sociales-footer {
-    display: flex;
-    flex-direction: column;
-}
-.group-redes-sociales-footer {
-    display: flex;
-    flex-direction:column;
-}
+@media (max-width: 717px) {
 
-.item-red-social {
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: row;
-}
-
-@media (max-width: 735px) {
-
-    .group-items-footer {
-        margin: auto;
+    .group-sucursales-footer {
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        overflow-x: hidden;
-    }
-
-    .item-footer {
         width: 100%;
-    }
-
-    .item-footer .ico-footer {
-        display: flex;
-        width: 20%;
         justify-content: center;
-        align-items: center;
-    }
-    .item-footer .texto-direccion {
 
-        width: 80%;
+        
     }
 
-    .group-tel-email {
-        align-items: center;
-        justify-content: center;
-        width: 100%;
+    .sucursal-footer {
+        width: 324px;
+        
     }
-    .item-tel-email {
-        transform: translateX(-10px);
-    }
-    .item-tel-email p {
-        margin-left: 0;
-    }
-
-    .group-redes-sociales-footer {
-        width: 100%;
-    }
-
-    .group-redes-sociales-footer .item-red-social .ico-footer {
-        width: 20%;
-    }
-    .group-redes-sociales-footer .item-red-social p {
-        width: 80%;
-    }
-
-
-    
 }
-
 
