--- a/css/contacto.css
+++ b/css/contacto.css
@@ -10,6 +10,18 @@
 	width: 100%;
 
 }
+
+.container-contact .content 
+{	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 95%;
+	margin-top: 25px;
+	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
+	text-align: center;
+	border-radius: 30px;
+}
+
 .container-contact .content 
 {	display: flex;
 	flex-direction: column;
@@ -38,113 +50,67 @@
 {
 	color: #fff;
 	font-size: 1.1em;
-	font-weight: 300;
-	font-family: 'Signika Negative', sans-serif;
-}
-.container 
-{
-	width: 95%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	gap: 50px;
-	margin-top: 30px;
-}
-.container .contactInfo 
-{
-	width: 50%;
-	display: flex;
-	flex-direction: column;
-}
-.container .contactInfo .box 
-{
-	position: relative;
-	width: 100%;
-	height: 170px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 20px;
-	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
-	margin: 10px 0 10px 0;
-
-}
-.container .contactInfo .box .ico-footer
-{	
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 30%;
-}
-
-.container .contactInfo .box .text 
-{
-	display: flex;
-	flex-direction: column;
-	width: 70%;
-	margin-left: 20px;
-	font-size: 1.1em;
-	color: #fff;
-	font-weight: 300;
-}
-.container .contactInfo .box .text h3 
-{	  font-family: "Jost", sans-serif;
-	text-decoration: underline;
-	font-weight: 900;
-	color: white;
-}
-.container .contactInfo .txt
-{
-	color: #fff;
-	margin-top: 50px;
 	font-weight: 500;
-	padding-left: 10px;
-	border-left: 50px solid #ffffff;
-	padding-right: 10px;
-	border-right: 50px solid #fff;
-	line-height: 1em;
 	font-family: 'Signika Negative', sans-serif;
 }
 
-.box .item-footer .item-red-social {
+.item-instagram {
 	display: flex;
-	width: 100%;
-	font-family: 'Signika Negative', sans-serif;
-
-
-
-}
-
-.box .item-footer .item-red-social p {
 	color: #fff;
-	font-weight: 900;
-	margin-left: 15px;
-
-}
-
-.box .group-redes-sociales {
-	display: flex;
 	flex-direction: column;
-}
-
-.box .group-redes-sociales h3 {
-	text-decoration: underline;
-	font-weight: 900;
-	color: white;
+	font-family: 'Signika Negative', sans-serif;
+	padding-bottom: 10px;
 
 }
+.item-instagram div {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+}
 
+.container-sucursales-contacto {
+	display: flex ;
+	width: 95%;
+	margin-top: 25px;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+} 
+ 
+.columna-sucursal {
+	font-family: 'Signika Negative', sans-serif;
+    color: white;
+    font-size: 20px;
+	width: 45%;
+	border-radius: 30px;
+	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
+	min-width: 342px;
+}
 
-/* lets make it responsive */
-@media (max-width: 740px)
-{
-	.container
-	{
+.columna-sucursal h3 {
+	text-align: center;
+
+}
+
+.columna-sucursal .item-sucursal-contacto {
+	margin: auto;
+	padding: 0 15px 0 15px;
+	width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+	justify-content: left;
+}
+
+@media (max-width: 790px) {
+	.container-sucursales-contacto {
 		flex-direction: column;
 	}
-	.container .contactInfo
-	{
-		width: 100%;
+	.columna-sucursal {
+		width: 95%;
+		align-items: center;
 	}
-
 }
+
+
