--- a/css/contacto.css
+++ b/css/contacto.css
@@ -103,6 +103,18 @@
 	justify-content: left;
 }
 
+.ico-contacto img {
+    width: 40px;
+    height: 40px;
+    padding: 3px 10px 3px 10px;
+    background-color: white;
+    border-radius: 50%;
+    margin: 0 6px;
+    -webkit-box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
+    box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
+}
+
 @media (max-width: 790px) {
 	.container-sucursales-contacto {
 		flex-direction: column;
