--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,11 @@ body {
     overflow-x: none;
     
 }
+.asdasd{
+	width: 100%;
+	height: 100%;
 
+}
 .float-wp {
     position: fixed;
     width: 60px;
@@ -37,6 +41,8 @@ body {
     right: 80px;
 
 }
+
+
 
 
 
