--- a/css/responsive-servicios.css
+++ b/css/responsive-servicios.css
@@ -10,7 +10,11 @@
 	border-radius: 30px;
 	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
 }
+
+
 .vid-servicios {
+	position: relative;
+
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
