--- a/css/contacto.css
+++ b/css/contacto.css
@@ -49,7 +49,7 @@
 .container-contact .content p 
 {
 	color: #fff;
-	font-size: 1.1em;
+	font-size: 1.2em;
 	font-weight: 500;
 	font-family: 'Signika Negative', sans-serif;
 }
@@ -66,6 +66,10 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
+}
+
+.item-instagram div p {
+	transform: translateX(30px);
 }
 
 .container-sucursales-contacto {
