--- a/css/index.css
+++ b/css/index.css
@@ -9,11 +9,7 @@ body {
     overflow-x: none;
     
 }
-.asdasd{
-	width: 100%;
-	height: 100%;
 
-}
 .float-wp {
     position: fixed;
     width: 60px;
@@ -41,9 +37,6 @@ body {
     right: 80px;
 
 }
-
-
-
 
 
 .float-wp .group-wp-sucursal a .item-sucursal-wp {
@@ -74,7 +67,7 @@ body {
 
 /*---- Scroll bar ---*/
 .sub-div {
-    max-height: 100vh;
+    max-height: 100%;
     overflow-y: scroll;
     /*Thumb color and background color for firefox */
     scrollbar-color: #00c6ff #242942;
