--- a/css/cards-services.css
+++ b/css/cards-services.css
@@ -38,6 +38,7 @@
   width: 100%;
   height: 170px;
   object-fit: cover;
+  object-position: left;
   margin-bottom: 30px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 30px 100%, 0 calc(100% - 30px));
           clip-path: polygon(0 0, 100% 0, 100% 100%, 30px 100%, 0 calc(100% - 30px));
