--- a/css/footer.css
+++ b/css/footer.css
@@ -27,8 +27,10 @@
     margin: 2%;
 }
 
+
 .sucursal-footer .item-footer {
     width: 100%;
+    height: 60px;
     display: flex;
     flex-direction: row;
     align-items: center;
