--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 
 body {
 
-    min-width: 456px;
+    min-width: 360px;
     padding: 0;
     margin: 0;
     background-image: url("../img/textura.jpg");
@@ -105,6 +105,7 @@ body {
 .container-header {
     display: flex;
     flex-direction: column;
+    
 
 }
 
@@ -217,6 +218,58 @@ article, footer {
 
 
     }
+}
+
+@media (min-width:360px) and (max-width:460px) {
+
+    @media (max-width: 427px) {
+        .container-header{
+            width: 100%;
+        }
+
+        .container-header .group-header img {
+
+            width: 110px;
+            height: 110px;
+        }
+
+        .container-header .group-header .group-text-header h2 {
+            transform: translateX(-13px);
+            font-size: 30px;
+        }
+
+        .container-header .group-header .group-text-header h3 {
+            transform: translate(-110px,-5px);
+            width: 250px;
+            font-size: 25px;
+        }
+
+        .float-wp {
+
+            width: 45px;
+            height: 45px;
+            background-color: #25d366;
+
+        
+        }
+
+        .fa-whatsapp {
+
+            font-size: 45px;
+            bottom: 30px;
+        
+        }
+
+        .float-wp .group-wp-sucursal a .item-sucursal-wp {
+            font-size: 16px;
+            margin: 5px -25px 5px 0;
+
+        }
+
+
+        
+    }
+
 }
 
 @keyframes aparecer {
