--- a/css/card-presentacion.css
+++ b/css/card-presentacion.css
@@ -1,7 +1,7 @@
 
 
 .container-card-presentacion {
-  box-sizing: border-box;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +14,7 @@
   background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
   display: flex;
   align-items: center;
-  width: 75vw;
+  width: 100%;
   max-width: 650px;
   padding: 50px 30px 50px 20px;
   border-radius: 24px;
@@ -102,5 +102,16 @@
     margin: -100px 0 30px 0;
     width: 100%;
     max-width: 1000px;
+  }
+}
+
+@media (min-width:360px) and (max-width:460px) {
+
+  @media (max-width: 427px) {
+    .card {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+    }
   }
 }
