--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 
 body {
 
+
     min-width: 360px;
     padding: 0;
     margin: 0;
@@ -95,27 +96,25 @@ body {
   
 /*Fin scroll bar */
 .container-header {
+
     width: 100%;
-    display: flex;
-    justify-content: left;
+    margin: 0;
     background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
     color: aliceblue;
 }
 
-.container-header {
-    display: flex;
-    flex-direction: column;
-    
-
+.grid-header {
+    display: grid;
+    grid-template-columns: minmax(100px,1fr) minmax(200px, 1fr);
+    grid-template-rows: 300px;
+    align-items: center;
+    justify-content: center;
 }
 
-.group-header {
-    transform: translateY(20px);
-    display: flex;
-    flex-direction: row;
-}
+.container-header img {
 
-.group-header img {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
     background: #fff;
     border-radius: 10%;
     object-fit: contain;
@@ -127,27 +126,19 @@ body {
     box-shadow: -25px 20px 22px 0px rgba(0,0,0,0.75);
 }
 
-.group-header div {
-    align-items: center;
-    display: flex ;
-    flex-direction: column;
-}
 
-.group-header div h3 {
-    transform: translateY(-15px);
-}
+
 
 .navbar-links ul li {
     font-family: 'Signika Negative', sans-serif;
     font-weight: 500;
+
 }
 
 .group-text-header {
     text-align: left;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
 }
 
 .group-text-header h2 {
@@ -200,57 +191,126 @@ article, footer {
 
 
 
-@media (max-width: 600px) {
-    .group-header {
-        transform: translateY(0px);
+@media (min-width: 501px) {
+
+
+
+    .grid-header {
+        display: flex;
     }
-    .group-header div h3 {
-        width: 271px;
-        transform: translate(-20px, -30px);
+
+
+    .float-wp {
+
+        width: 60px;
+        height: 60px;
+        background-color: #25d366;
+
+    }
+
+    .fa-whatsapp {
+
+        font-size: 60px;
+        bottom: 30px;
+    
+    }
+
+    .float-wp .group-wp-sucursal a .item-sucursal-wp {
+        font-size: 14px;
+        margin: 5px -25px 5px 0;
+
     }
 
 }
 
-@media (max-width: 461px) {
-    .group-header div h3 {
-        font-size: 25px;
-        transform: translate(-140px,-30px);
+@media (min-width: 565px) and (max-width: 600px) {
+    .grid-header .group-text-header h3 {
 
+        width: 300px;
 
     }
 }
 
-@media (min-width:360px) and (max-width:460px) {
+@media (min-width: 461px) and (max-width:500px) {
+    .grid-header img {
+        transform: translate(15px,-60px);
+        width: 150px;
+        height: 150px;
+    }
 
-    @media (max-width: 427px) {
-        .container-header{
-            width: 100%;
+    .grid-header .group-text-header h2 {
+        transform: translate(-15px,-20px);
+    }
+
+    .grid-header .group-text-header h3 {
+        transform: translate(-180px,-20px);
+        width: 350px;
+
+    }
+
+
+}
+
+@media (min-width: 391px) and (max-width:460px) {
+    .grid-header img {
+        transform: translate(15px,-60px);
+        width: 125px;
+        height: 125px;
+    }
+    .grid-header .group-text-header h2 {
+        font-size: 35px;
+        transform: translate(-15px,-20px);
+    }
+    .grid-header .group-text-header h3 {
+        transform: translate(-150px,-20px);
+        width: 350px;
+
+    }
+    .float-wp {
+
+        width: 50px;
+        height: 50px;
+        background-color: #25d366;
+
+    }
+
+    .fa-whatsapp {
+
+        font-size: 50px;
+        bottom: 30px;
+    
+    }
+
+    .float-wp .group-wp-sucursal a .item-sucursal-wp {
+        font-size: 15px;
+        margin: 5px -25px 5px 0;
+
+    }
+}
+
+@media (min-width:360px) and (max-width:390px) {
+        
+        .grid-header img {
+            transform: translate(15px,-60px);
+            width: 120px;
+            height: 120px;
         }
 
-        .container-header .group-header img {
-
-            width: 110px;
-            height: 110px;
-        }
-
-        .container-header .group-header .group-text-header h2 {
-            transform: translateX(-13px);
+        .grid-header .group-text-header h2 {
             font-size: 30px;
+            transform: translate(10px,-30px);
         }
+        .grid-header .group-text-header h3 {
+            transform: translate(-140px,-10px);
+            width: 350px;
 
-        .container-header .group-header .group-text-header h3 {
-            transform: translate(-110px,-5px);
-            width: 250px;
-            font-size: 25px;
         }
-
         .float-wp {
 
             width: 45px;
             height: 45px;
             background-color: #25d366;
 
-        
         }
 
         .fa-whatsapp {
@@ -261,14 +321,12 @@ article, footer {
         }
 
         .float-wp .group-wp-sucursal a .item-sucursal-wp {
-            font-size: 16px;
+            font-size: 14px;
             margin: 5px -25px 5px 0;
 
         }
-
-
         
-    }
+    
 
 }
 
