--- a/css/responsive-servicios.css
+++ b/css/responsive-servicios.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap");
 .container-galeria-servicios {
+	display: flex;
+	align-items: center;
 	margin-top: 35px;
 	margin-bottom: 55px;
 	width: 95%;
