Corregir Titulo Header a la izquierda

--- a/css/index.css
+++ b/css/index.css
@@ -197,6 +197,14 @@ article, footer {
 
     .grid-header {
         display: flex;
+        justify-content: left;
+        align-items: center;
+    }
+
+    .grid-header .group-text-header h3 {
+
+        width: 300px;
+
     }
 
 
