--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .container-footer {
-    font-family: 'Signika Negative', sans-serif;
+    font-family: 'Lato', sans-serif;
     color: white;
     font-size: 20px;
     align-items: center;
