--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ body {
     /*Thumb color and background color for firefox */
     scrollbar-color: #00c6ff #242942;
     overflow-x: none;
+    font-family: 'Lato', sans-serif;
     
 }
 
@@ -106,7 +107,7 @@ body {
 .grid-header {
     display: grid;
     grid-template-columns: minmax(100px,1fr) minmax(200px, 1fr);
-    grid-template-rows: 300px;
+    grid-template-rows: 240px;
     align-items: center;
     justify-content: center;
 }
@@ -130,7 +131,7 @@ body {
 
 
 .navbar-links ul li {
-    font-family: 'Signika Negative', sans-serif;
+
     font-weight: 500;
 
 }
@@ -144,17 +145,8 @@ body {
 .group-text-header h2 {
     font-size: 40px;
     font-style: oblique;
-    font-family: 'Merriweather', serif;
+
     letter-spacing: 2px;
-
-
-}
-
-.group-text-header h3 {
-    font-style: oblique;
-    font-family: 'Anton', sans-serif;
-    letter-spacing: 2px;
- ;
 
 
 }
@@ -232,11 +224,7 @@ article, footer {
 }
 
 @media (min-width: 565px) and (max-width: 600px) {
-    .grid-header .group-text-header h3 {
 
-        width: 300px;
-
-    }
     .float-wp {
 
         width: 60px;
@@ -259,22 +247,40 @@ article, footer {
     }
 }
 
+@media (min-width:601px) and (max-width: 704px) {
+    .grid-header .group-text-header h2 {
+
+        width: 433px;
+    }
+}
+@media (min-width:515px) and (max-width:600px) {
+
+    .grid-header .group-text-header h2 {
+
+        font-size: 36px;
+    }
+
+}
+@media (min-width:501px) and (max-width:514px) {
+
+    .grid-header .group-text-header h2 {
+
+        font-size: 36px;
+    }
+}
+
 @media (min-width: 461px) and (max-width:500px) {
     .grid-header img {
-        transform: translate(15px,-60px);
-        width: 150px;
-        height: 150px;
+        transform: translate(15px,-20px);
+        width: 140px;
+        height: 140px;
     }
 
     .grid-header .group-text-header h2 {
         transform: translate(-15px,-20px);
+        font-size: 35px;
     }
 
-    .grid-header .group-text-header h3 {
-        transform: translate(-180px,-20px);
-        width: 350px;
-
-    }
 
     .float-wp {
 
@@ -302,19 +308,15 @@ article, footer {
 
 @media (min-width: 391px) and (max-width:460px) {
     .grid-header img {
-        transform: translate(15px,-60px);
+        transform: translate(15px,-20px);
         width: 125px;
         height: 125px;
     }
     .grid-header .group-text-header h2 {
-        font-size: 35px;
+        font-size: 30px;
         transform: translate(-15px,-20px);
     }
-    .grid-header .group-text-header h3 {
-        transform: translate(-150px,-20px);
-        width: 350px;
 
-    }
     .float-wp {
 
         width: 50px;
@@ -340,20 +342,16 @@ article, footer {
 @media (min-width:360px) and (max-width:390px) {
         
         .grid-header img {
-            transform: translate(15px,-60px);
+            transform: translate(15px,-30px);
             width: 120px;
             height: 120px;
         }
 
         .grid-header .group-text-header h2 {
-            font-size: 30px;
+            font-size: 28px;
             transform: translate(10px,-30px);
         }
-        .grid-header .group-text-header h3 {
-            transform: translate(-140px,-10px);
-            width: 350px;
 
-        }
         .float-wp {
 
             width: 45px;
