--- a/css/card-presentacion.css
+++ b/css/card-presentacion.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Euclid Circular A", "Poppins";
+  font-family: 'Lato', sans-serif;
   margin-bottom: 50px;
 } 
 
@@ -25,7 +25,6 @@
   max-width: 280px;
   width: 28vw;
   height: 300px;
-  object-fit: cover;
   margin-left: -60px;
   margin-right: 30px;
   border-radius: inherit;
@@ -37,7 +36,6 @@
 
 .card h2 {
   font-size: 22px;
-  font-family: 'Signika Negative', sans-serif;
   margin-right: 30px;
   color: white;
 }
@@ -46,7 +44,7 @@
   font-size: 18px;
   font-weight: 400;
   color: white;
-  font-family: 'Signika Negative', sans-serif;
+
 }
 
 .card p {
@@ -54,16 +52,16 @@
   font-weight: 400;
   color: white;
   margin-bottom: 24px;
-  font-family: 'Signika Negative', sans-serif;
+
 }
 
 .card button {
   border: 0;
-  font-family: 'Signika Negative', sans-serif;
+
   font-size: 16px;
   background: white;
   color: rgba(17,91,92,1);
-  font-family: inherit;
+
   padding: 16px 26px;
   font-size: 16px;
   border-radius: 40px;
