--- a/css/responsive-servicios.css
+++ b/css/responsive-servicios.css
@@ -1,11 +1,9 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap");
 .container-galeria-servicios {
-	display: flex;
-	align-items: center;
 	margin-top: 35px;
 	margin-bottom: 55px;
 	width: 95%;
-	font-family: 'Lato', sans-serif;
+	font-family: "Jost", sans-serif;
 	padding: 1rem;
 	display: grid;
 	place-items: center;
@@ -16,7 +14,6 @@
 
 .vid-servicios {
 	position: relative;
-
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -45,6 +42,20 @@
 	transition: grid-template 300ms;
 }
 
+/* .grid .video-1, .grid .video-2, .grid .video-3, .grid .video-4 {
+	width: 100%;
+	height: 100%;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform: translate3d(100%, 0, 0);
+	transition: transform 300ms;
+	pointer-events: none;
+} */
+
 .item {
 	--i: 0.5rem;
 	--c1: deeppink;
@@ -65,12 +76,12 @@
 	grid-template: 1fr / 1fr var(--innerTrack, 0);
 }
 
-/* .item:hover img {
+.item:hover img {
 	opacity: 1;
 	transform: translate3d(0, 0, 0);
-} */
+}
 
-.item:hover {
+.item:hover video {
 	opacity: 1;
 	transform: translate3d(0, 0, 0);
 }
