--- a/css/responsive-servicios.css
+++ b/css/responsive-servicios.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&display=swap");
+
 .container-galeria-servicios {
 	margin-top: 35px;
 	margin-bottom: 55px;
 	width: 95%;
-	font-family: "Jost", sans-serif;
+	font-family: 'Lato', sans-serif;
 	padding: 1rem;
 	display: grid;
 	place-items: center;
@@ -11,7 +11,7 @@
 	background: linear-gradient(0deg, rgba(17,91,92,1) 0%, rgba(0,133,100,1) 100%);
 }
 
-
+/*acomoda el video que ejecutas*/
 .vid-servicios {
 	position: relative;
 	width: 100%;
