--- a/css/presentacion-videos.css
+++ b/css/presentacion-videos.css
@@ -44,6 +44,9 @@
   border-radius: 25px;
 }
 
+.swiper-slide .display-btn-play-1, .swiper-slide .display-btn-play-2, .swiper-slide .display-btn-play-3, .swiper-slide .display-btn-play-4{
+  display: none;
+}
 
 .swiper-slide .btn-play-background img {
   opacity: .7;
@@ -74,7 +77,7 @@
 .btn-pause-background img {
   opacity: .7;
   left: -47%;
-  top: 0%;
+  top: 1%;
   z-index: 9999;
   background-color: #fff;
   object-fit: contain;
@@ -144,7 +147,34 @@
   background-image: none;
 }
 
+.container-loading-1, .container-loading-2, .container-loading-3, .container-loading-4 {
+  display: inherit;
+
+}
+.spinner {
+  position: absolute;
+  background-color: #000;
+  width: 50px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #1c9c89;
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: s3 1s infinite linear;
+}
+@keyframes s3 {to{transform: rotate(1turn)}}
+
 @media (min-width: 360px) and (max-width: 430px) {
+  .spinner {
+    top: 38%;
+    left: 33%;
+  }
   .swiper-slide div h2 {
     font-size: 1rem;
     text-align: center;
@@ -159,8 +189,8 @@
   }
 
   .swiper-slide .btn-pause-background img {
-    left: -40%;
-    top: 3%;
+    left: -45%;
+    top: 2%;
     width: 40px;
     height: 40px
     
@@ -169,7 +199,10 @@
 }
 
 @media (min-width: 431px) and (max-width: 449px) {
-
+  .spinner {
+    top: 34%;
+    left: 36%;
+  }
   .swiper-slide div h2 {
     max-height: 32px;
   }
@@ -188,7 +221,10 @@
   }
 }
 @media (min-width: 450px) and (max-width: 600px) {
-
+  .spinner {
+    top: 34%;
+    left: 36%;
+  }
   .swiper-slide div h2 {
     max-height: 32px;
   }
@@ -202,16 +238,30 @@
   .swiper-slide .btn-pause-background img {
     left: -46%;
     top: 2%;
-    width: 55px;
-    height: 55px;
+    width: 50px;
+    height: 50px;
     
+  }
+}
+
+@media (min-width:601px) and (max-width: 855px) {
+  .spinner {
+    top: 35%;
+    left: 39%;
+  }
+}
+
+@media (min-width:856px) {
+  .spinner {
+    top: 35%;
+    left: 45%;
   }
 }
 
 @media (min-width:900px) {
   .swiper-slide .btn-pause-background img {
     left: -48%;
-    top: 2%;
+    top: 0%;
     width: 55px;
     height: 55px;
     
