--- a/css/presentacion-videos.css
+++ b/css/presentacion-videos.css
@@ -170,6 +170,41 @@
 }
 @keyframes s3 {to{transform: rotate(1turn)}}
 
+.container-reload {
+
+  width: 95%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  right: 20%;
+  z-index: 9999;
+}
+
+.container-reload p {
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+  color: #1c9c89;
+  font-weight: 700;
+}
+
+.container-reload img {
+  width: 60px;
+  height: 60px;
+}
+
+.container-reload .background-ico-reload:hover {
+  cursor: pointer;
+  background-color: #1c9c89;
+  border-radius: 50%;
+  transition: background-color .5s ease-in;
+}
+.container-reload img {
+  width: 60px;
+  height: 60px;
+}
+
+
+
 @media (min-width: 360px) and (max-width: 430px) {
   .spinner {
     top: 38%;
