--- a/css/footer.css
+++ b/css/footer.css
@@ -23,6 +23,7 @@
 
 .sucursal-footer {
     display: flex;
+    width: 100%;
     flex-direction: column;
     margin: 2%;
 }
@@ -43,7 +44,7 @@
 }
 
 .sucursal-footer .item-footer .text-direccion {
-    width: 80%;
+    width: 270px;
     height: 45px;
 
 }
@@ -54,7 +55,7 @@
     padding: 3px 10px 3px 10px;
     background-color: white;
     border-radius: 50%;
-    transform: translateX(20px);
+    transform: translateX(32px);
     -webkit-box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
     box-shadow: -8px 10px 54px 0px rgba(0,0,0,0.75);
